crates/service/tests/completion/snapshots/features__completion__local__locals_and_params.snap
---
source: crates/service/tests/completion/local.rs
expression: response
---
[
  {
    "label": "$p",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6
  },
  {
    "label": "1",
    "labelDetails": {
      "description": "f32"
    },
    "kind": 6
  },
  {
    "label": "2",
    "labelDetails": {
      "description": "f64"
    },
    "kind": 6
  },
  {
    "label": "$l",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6
  },
  {
    "label": "4",
    "labelDetails": {
      "description": "f32"
    },
    "kind": 6
  },
  {
    "label": "5",
    "labelDetails": {
      "description": "f64"
    },
    "kind": 6
  }
]
