crates/service/tests/completion/snapshots/features__completion__local__locals_and_params_following_dollar.snap
---
source: crates/service/tests/completion/local.rs
expression: response
---
[
  {
    "label": "$p",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 3,
          "character": 19
        },
        "end": {
          "line": 3,
          "character": 20
        }
      },
      "newText": "$p"
    }
  },
  {
    "label": "1",
    "labelDetails": {
      "description": "f32"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 3,
          "character": 19
        },
        "end": {
          "line": 3,
          "character": 20
        }
      },
      "newText": "1"
    }
  },
  {
    "label": "2",
    "labelDetails": {
      "description": "f64"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 3,
          "character": 19
        },
        "end": {
          "line": 3,
          "character": 20
        }
      },
      "newText": "2"
    }
  },
  {
    "label": "$l",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 3,
          "character": 19
        },
        "end": {
          "line": 3,
          "character": 20
        }
      },
      "newText": "$l"
    }
  },
  {
    "label": "4",
    "labelDetails": {
      "description": "f32"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 3,
          "character": 19
        },
        "end": {
          "line": 3,
          "character": 20
        }
      },
      "newText": "4"
    }
  },
  {
    "label": "5",
    "labelDetails": {
      "description": "f64"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 3,
          "character": 19
        },
        "end": {
          "line": 3,
          "character": 20
        }
      },
      "newText": "5"
    }
  }
]
