crates/service/tests/completion/snapshots/features__completion__local__locals_and_params_following_int_idx.snap
---
source: crates/service/tests/completion/local.rs
expression: response
---
[
  {
    "label": "$p",
    "kind": 6
  },
  {
    "label": "1",
    "kind": 6
  },
  {
    "label": "2",
    "kind": 6
  },
  {
    "label": "$l",
    "kind": 6
  },
  {
    "label": "4",
    "kind": 6
  },
  {
    "label": "5",
    "kind": 6
  }
]
